--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          <div class="contents end">
            <div class="after">
              <div class="text-Center">次のページ</div>
-             <a href="http://TAMGameCreator.github.io/NO.03" class="Line-Item">地球</a>
+             <a href="http://TAMGameCreator.github.io/SpaceEarth/" class="Line-Item">地球</a>
            </div>
          </div>
        </body>
