--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1">
          <title>宇宙への旅</title>
-         <meta name="description" content="Unityで作成したゲームの無料配布やUnityに関する記事を書いています">
+         <meta name="description" content="宇宙(主に太陽系について)に関しての雑学をたっぷりご紹介">
          <link rel="icon" type="image/png" href="data/ヘッダー.png">
          <link rel="stylesheet"href="data/style.css">
        </head>
